--- a/apps/shelter-web/index.html
+++ b/apps/shelter-web/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-
 <head>
   <meta charset="utf-8" />
   <title>Shelter DB</title>
   <meta name="description" content="LA Homeless Shelter search.">
   <meta name="keywords" content="shelters" />
   <base href="/" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=1">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=1">
   <link rel="stylesheet" href="/src/assets/styles/fonts.css" />
   <link rel="stylesheet" href="/src/assets/styles/global.css" />
+  <!-- FAVICONS -->
 </head>
-
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
