--- a/apps/shelter-web/index.html
+++ b/apps/shelter-web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
       <meta charset="utf-8" />
-      <title>Shelter DB</title>
+      <title>Shelter LA</title>
       <meta name="description" content="LA Homeless Shelter search.">
       <meta name="keywords" content="shelters" />
       <base href="/" />
@@ -20,7 +20,7 @@
       <meta name="msapplication-TileColor" content="#ffffff" />
       <meta name="msapplication-config" content="/browserconfig.xml" />
       <!-- Social Sharing: Open Graph -->
-      <meta property="og:title" content="Shelter DB" />
+      <meta property="og:title" content="Shelter LA" />
       <meta property="og:description"
             content="Search and find available shelters across Los Angeles." />
       <meta property="og:image" content="/og-image.png" />
@@ -28,7 +28,7 @@
       <meta property="og:url" content="https://shelter.betterangels.la" />
       <!-- Social Sharing: Twitter -->
       <meta name="twitter:card" content="summary_large_image" />
-      <meta name="twitter:title" content="Shelter DB" />
+      <meta name="twitter:title" content="Shelter LA" />
       <meta name="twitter:description"
             content="Search and find available shelters across Los Angeles." />
       <meta name="twitter:image" content="/og-image.png" />
